Fix reflective construction